prover-ray/zkcdriver/testdata/synced/invalid/cast_03.zkc
//error:2:13-17:unknown type alias
type my_t = uint

fn f(x:u32) -> (r:u32) {
  r = x as my_t
}
